--- a/public/assets/css/hovercard.css
+++ b/public/assets/css/hovercard.css
@@ -3,7 +3,7 @@
 }
 
 .hover-effect:hover {
-    transform: scale(1.05);
+    transform: scale(1.06);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -22,3 +22,7 @@
 .main-content {
     transition: all 0.3s ease;
  } 
+
+.custom-height {
+    height: 70%;
+}
